---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_mlir_fail_todo/stream_typing.arc

---
fun test0(x_0: ~{ val: i32, key: i32 }) -> ~{ val: i32, key: i32 } {
    crate::test1(x_0)
}
fun test1(x_1: ~{ val: i32, key: i32 }) -> ~{ val: i32, key: i32 } {
    x_1
}

